--- a/urls.cfg
+++ b/urls.cfg
@@ -1,5 +1,4 @@
-google=https://google.com
-hn=https://news.ycombinator.com
-reddit=https://reddit.com
-statsig=https://www.statsig.com
-worldclock=http://worldclockapi.com/api/json/utc/now
+main=https://ferris.site
+api=https://api.ferris.chat
+py-docs=https://py.docs.ferris.chat
+node-docs=https://node.docs.ferris.chat
