--- a/urls.cfg
+++ b/urls.cfg
@@ -1,4 +1,4 @@
-main=https://ferris.site
+main=https://ferris.chat
 api=https://api.ferris.chat
 py-docs=https://py.docs.ferris.chat
 node-docs=https://node.docs.ferris.chat
