--- a/urls.cfg
+++ b/urls.cfg
@@ -1,4 +1,4 @@
 main=https://ferris.chat
-api=https://api.ferris.chat/v0
+api=https://api.ferris.chat/v0/ping
 py-docs=https://py.docs.ferris.chat/en/latest
 node-docs=https://node.docs.ferris.chat
