--- a/urls.cfg
+++ b/urls.cfg
@@ -1,4 +1,6 @@
 main=https://ferris.chat
+client=https://client.ferris.chat
 docs=https://docs.ferris.chat
+download=https://download.ferris.chat
 py-docs=https://py.docs.ferris.chat/en/latest
 node-docs=https://node.docs.ferris.chat
