--- a/urls.cfg
+++ b/urls.cfg
@@ -1,6 +1,6 @@
 main=https://ferris.chat
 client=https://client.ferris.chat
-api=https://api.ferris.chat/v0/ping
+apiv0=https://api.ferris.chat/v0/ping
 download=https://download.ferris.chat
 docs=https://docs.ferris.chat
 py-docs=https://py.docs.ferris.chat/en/latest
